tentative img fixing

--- a/.forestry/front_matter/templates/journal.yml
+++ b/.forestry/front_matter/templates/journal.yml
@@ -32,8 +32,8 @@ fields:
       file: data/authors/nichlas-w-andersen.json
     required: true
     options:
-    - Nichlas W. Andersen
+    - Rémy Marronnier
   label: Author
-  default: Nichlas W. Andersen
+  default: Rémy Marronnier
 pages:
 - journal/this-is-a-dummy-post.md
